--- a/index.css
+++ b/index.css
@@ -367,39 +367,33 @@ body {
   margin-top: 0;
 }
 
-/* @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
-  .tab-screen {
-    display: block !important;
+/* @media (orientation: portrait) {
+  .slide-background-content {
+    background-size: contain !important;
   }
-  .normal-screen {
-    display: none !important;
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .slide-background-content {
+    background-size: contain !important;
   }
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
-  .tab-screen {
-    display: block !important;
-  }
-  .normal-screen {
-    display: none !important;
+  .slide-background-content {
+    background-size: contain !important;
   }
 }
 
 @media only screen and (min-device-width: 834px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 2) {
-  .tab-screen {
-    display: block !important;
-  }
-  .normal-screen {
-    display: none !important;
+  .slide-background-content {
+    background-size: contain !important;
   }
 }
 
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) {
-  .tab-screen {
-    display: block !important;
-  }
-  .normal-screen {
-    display: none !important;
+  .slide-background-content {
+    background-size: contain !important;
   }
 } */
 
